created home page to display all member first and last names

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -9,5 +9,12 @@
 
  <body>
    <h1> Welcome to my members page</h1> 
+   <% @members.each do |member| %>
+   	<div>
+   		<h2><%= member.first_name %>
+   		<%= member.last_name %></h2><br />
+   		<hr/>
+   	</div>
+   <% end %>
  </body>
 </html>
